Run tests using JDK-17 (#6872)
Run tests using JDK-17